--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -7,15 +7,17 @@ on:
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  GKE_CLUSTER: your-cluster-name
-  GKE_ZONE: your-cluster-zone
-  IMAGE: your-image-name
-  HELM_RELEASE: your-helm-release
-  HELM_CHART: helm/go-api  # path to your Helm chart
+  GKE_CLUSTER: june-api-1
+  GKE_ZONE: europe-west3
+  IMAGE: june-api
+  HELM_RELEASE: june-api
+  HELM_CHART: helm/june-api
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
+    outputs:
+      image_tag: ${{ steps.tag.outputs.tag }}
 
     steps:
     - name: Checkout Repository
@@ -36,13 +38,42 @@ jobs:
       run: |
         gcloud auth configure-docker
 
-    - name: Build Docker Image
-      run: |
-        docker build -t "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" .
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-    - name: Push Docker Image to GCR
-      run: |
-        docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: |
+          gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE }}:${{ github.sha }}
+          gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE }}:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+
+    - name: Set Image Tag
+      id: tag
+      run: echo "tag=latest" >> $GITHUB_OUTPUT
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+
+    - name: Authenticate with Google Cloud
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GKE_SA_KEY }}
+
+    - name: Set Up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v2
+      with:
+        project_id: ${{ env.PROJECT_ID }}
+        install_components: "gke-gcloud-auth-plugin"
 
     - name: Set Up Kubectl
       run: |
@@ -54,7 +85,8 @@ jobs:
     - name: Deploy with Helm
       run: |
         helm upgrade --install $HELM_RELEASE $HELM_CHART \
-          --set image.repository=gcr.io/$PROJECT_ID/$IMAGE \
-          --set image.tag=$GITHUB_SHA \
+          --set image.repository=gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE }} \
+          --set image.tag=${{ needs.build.outputs.image_tag }} \
+          --set image.pullSecrets[0].name=gcr-pull-secret \
           --namespace default \
           --create-namespace
