--- a/helm/june-api/Chart.yaml
+++ b/helm/june-api/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: go-api
-description: A Helm chart for Go API application
+name: june-api
+description: A Helm chart for June Go API 
 type: application
 version: 0.1.0
 appVersion: "1.0.0" 
