--- a/helm/june-api/templates/configmap.yaml
+++ b/helm/june-api/templates/configmap.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "go-api.fullname" . }}-config
+  name: {{ include "june-api.fullname" . }}-config
   labels:
-    {{- include "go-api.labels" . | nindent 4 }}
+    {{- include "june-api.labels" . | nindent 4 }}
 data:
   GIN_MODE: {{ .Values.config.ginMode | quote }}
   PORT: {{ .Values.config.port | quote }} 
