--- a/helm/june-api/templates/deployment.yaml
+++ b/helm/june-api/templates/deployment.yaml
@@ -1,23 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "go-api.fullname" . }}
+  name: {{ include "june-api.fullname" . }}
   labels:
-    {{- include "go-api.labels" . | nindent 4 }}
+    {{- include "june-api.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "go-api.selectorLabels" . | nindent 6 }}
+      {{- include "june-api.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "go-api.selectorLabels" . | nindent 8 }}
+        {{- include "june-api.selectorLabels" . | nindent 8 }}
     spec:
+      {{- with .Values.image.pullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: {{ .Values.config.port | int }}
