--- a/helm/june-api/templates/service.yaml
+++ b/helm/june-api/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "go-api.fullname" . }}
+  name: {{ include "june-api.fullname" . }}
   labels:
-    {{- include "go-api.labels" . | nindent 4 }}
+    {{- include "june-api.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "go-api.selectorLabels" . | nindent 4 }} 
+    {{- include "june-api.selectorLabels" . | nindent 4 }} 
+    
