--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: ${API_IMAGE_NAME:-june-api:latest}
     ports:
       - "3000:8080"
     depends_on:
